[Add]<br>のスペルミス校閲

--- a/1-11.html
+++ b/1-11.html
@@ -2,8 +2,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-     <link rel="stylesheet" href="1-9.css" />
-    <title>HTML.CSS9章</title>
+     <link rel="stylesheet" href="1-11.css" />
+    <title>課題1</title>
   </head>
   <body>
     <header></header>
@@ -22,7 +22,7 @@
           <h3　class="title">タイトルが入ります</h3>
           <p>文章が入ります。文章が入ります。文章が入りま<br/>
            す。文章が入ります。文章が入ります。文章が入り<br/>
-           ます。文章が入ります。文章が入ります。文章が入<be/>
+           ます。文章が入ります。文章が入ります。文章が入<br/>
            ります。</p>
           <span class="step-num">step2</span>
       </div>
