--- a/1-11.html
+++ b/1-11.html
@@ -9,29 +9,30 @@
     <header></header>
     <main>
       <div class="step-box">
+        <span class="step-num">step1</span>
         <div class="step-img1"></div>
-          <h3　class="title">タイトルが入ります</h3>
-            <p>文章が入ります。文章が入ります。文章が入りま<br/>
-            す。文章が入ります。文章が入ります。文章が入り<br/>
-            ます。文章が入ります。文章が入ります。文章が入<br/>
+          <h3 class="title">タイトルが入ります</h3>
+            <p>文章が入ります。文章が入ります。文章が入りま
+            す。文章が入ります。文章が入ります。文章が入り
+            ます。文章が入ります。文章が入ります。文章が入
             ります。</p>
-           <span class="step-num">step1</span>
+
       </div>
       <div class="step-box">
         <div class="step-img2"></div>
-          <h3　class="title">タイトルが入ります</h3>
-          <p>文章が入ります。文章が入ります。文章が入りま<br/>
-           す。文章が入ります。文章が入ります。文章が入り<br/>
-           ます。文章が入ります。文章が入ります。文章が入<br/>
+          <h3 class="title">タイトルが入ります</h3>
+          <p>文章が入ります。文章が入ります。文章が入りま
+           す。文章が入ります。文章が入ります。文章が入り
+           ます。文章が入ります。文章が入ります。文章が入
            ります。</p>
           <span class="step-num">step2</span>
       </div>
       <div class="step-box">
         <div class="step-img3"></div>
-          <h3　class="title">タイトルが入ります</h3>
-           <p>文章が入ります。文章が入ります。文章が入りま<br/>
-           す。文章が入ります。文章が入ります。文章が入り<br/>
-           ます。文章が入ります。文章が入ります。文章が入</br/>
+          <h3 class="title">タイトルが入ります</h3>
+           <p>文章が入ります。文章が入ります。文章が入りま
+           す。文章が入ります。文章が入ります。文章が入り
+           ます。文章が入ります。文章が入ります。文章が入
            ります。</p>
           <span class="step-num">step3</span>
       </div>
